--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          path: dorrot-blog # 프로젝트의 서브 디렉토리로 체크아웃
       - name: Detect package manager
         id: detect-package-manager
         run: |
