test: 배포 환경 설정 중

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,10 @@ jobs:
       - name: Detect package manager
         id: detect-package-manager
         run: |
-          BASE_DIR="${{ github.workspace }}"
+          BASE_DIR="${{ github.workspace }}/dorrot-blog"
+          echo "Using BASE_DIR: $BASE_DIR"
+          ls -al $BASE_DIR # 디렉토리 내용 확인
+
           if [ -f "${BASE_DIR}/yarn.lock" ]; then
             echo "manager=yarn" >> $GITHUB_OUTPUT
             echo "command=install" >> $GITHUB_OUTPUT
