--- a/dorrot-blog/package.json
+++ b/dorrot-blog/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "yarn open && next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "open": "open http://localhost:3000"
   },
   "dependencies": {
     "@mantine/core": "^7.10.0",
